# CSE306

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
CSE305 - Assignment 1 report/: main.tex
CSE306 - Assignment 1 report/: main.tex
CSE306_TD5/: CMakeLists.txt  main.cpp
classes/: geometry.h  mesh.h  old_scene.h  ray.h  scene.h  sphere.h  vector.h
